Created the grid mover class
- Allows for easy movement along the grid in a given direction
- Will be applied to the crabs as well as the cards when placed onto the grid

--- a/SandcastleScuffle/Assembly-CSharp.csproj
+++ b/SandcastleScuffle/Assembly-CSharp.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
     <Compile Include="Assets\Studio Assets\Scripts\Grid_Controller.cs" />
     <Compile Include="Assets\Studio Assets\Scripts\Grid_Square.cs" />
+    <Compile Include="Assets\Studio Assets\Scripts\Grid_Mover.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
