Set up basic crab spawning, movement, data
- Created the basic class class
- Crabs have a random type assigned
- The type defines how the crabs look
- Added the ability to spawn crabs and move them around the grid
- Currently, there is no interaction between multiple crabs on the same tile

--- a/SandcastleScuffle/Assembly-CSharp.csproj
+++ b/SandcastleScuffle/Assembly-CSharp.csproj
@@ -55,12 +55,15 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Studio Assets\Scripts\Grid_Square.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventHandler.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
+    <Compile Include="Assets\Studio Assets\Scripts\Grid_Mover.cs" />
+    <Compile Include="Assets\Studio Assets\Scripts\Grid_Controller.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
@@ -89,9 +92,9 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshProFloatingText.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
-    <Compile Include="Assets\Studio Assets\Scripts\Grid_Controller.cs" />
-    <Compile Include="Assets\Studio Assets\Scripts\Grid_Square.cs" />
-    <Compile Include="Assets\Studio Assets\Scripts\Grid_Mover.cs" />
+    <Compile Include="Assets\Studio Assets\Scripts\Crab_Controller.cs" />
+    <Compile Include="Assets\Studio Assets\Scripts\Crab_Manager.cs" />
+    <Compile Include="Assets\Studio Assets\Scripts\Crab_Visuals.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
@@ -104,7 +107,6 @@
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
-     <None Include="Assets\Studio Assets\Sprites\PLACEHOLDER.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
      <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
      <None Include="Assets\Studio Assets\Shaders\PLACEHOLDER.txt" />
